
AC_PREREQ([2.65])
 
AC_INIT([4dtris], [0.4.0], [https://launchpad.net/4dtris])
 
AM_INIT_AUTOMAKE(4dtris, 0.4.0)
 
AC_CONFIG_SRCDIR([src])

AM_GNU_GETTEXT([external])
AM_GNU_GETTEXT_VERSION(0.17)

# Checks for programs.
 
AC_PROG_CC

# Checks for libraries.
 
AC_CHECK_LIB([GL], [glBegin])
AC_CHECK_LIB([GLU], [gluQuadricNormals])
AC_CHECK_LIB([SDL], [SDL_Init])
AC_CHECK_LIB([SDL_ttf], [TTF_RenderUTF8_Blended])
AC_CHECK_LIB([m], [sqrt])
 
# Checks for header files.

AC_CHECK_HEADERS([stdlib.h string.h math.h stdio.h limits.h GL/gl.h GL/glu.h SDL/SDL.h SDL/SDL_ttf.h libintl.h locale.h])

# Checks for typedefs, structures, and compiler characteristics.
 
AC_CHECK_FUNCS([pow setlocale sqrt])

AC_C_INLINE 

AC_CONFIG_FILES([Makefile po/Makefile.in])

AC_OUTPUT